--- a/demo1.html
+++ b/demo1.html
@@ -4,7 +4,7 @@
     <title>HS애드차이나</title>
     <script type="text/javascript" src="drag.js"></script>
 <body>
-<div id="div1"></div>
+<div id="div1">aa</div>
 </body>
 
 
