demo1 add style

--- a/demo1.html
+++ b/demo1.html
@@ -2,6 +2,9 @@
 <html lang="ko">
 <head>
     <title>HS애드차이나</title>
+    <style>
+    	#div1{width: 100px; height: 100px;background: red}
+    </style>
     <script type="text/javascript" src="drag.js"></script>
 <body>
 <div id="div1">aa</div>
