add style by smallGz to demo1

--- a/demo1.html
+++ b/demo1.html
@@ -3,6 +3,9 @@
 <head>
     <title>HS애드차이나</title>
     <script type="text/javascript" src="drag.js"></script>
+    <style>
+    	#div1{width: 200px; height: 200px; background: blue}
+    </style>
 <body>
 <div id="div1">aa</div>
 </body>
