--- a/demo1.html
+++ b/demo1.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
     <title>HS애드차이나</title>
-    <script type="text/javascript" src="drag.js"></script>
     <style>
-    	#div1{width: 200px; height: 200px; background: blue}
-    </style>
+     	#div1{width: 200px; height: 200px;background: red}
+     </style>
+    <script type="text/javascript" src="drag.js"></script>
 <body>
 <div id="div1">aa</div>
 </body>
