--- a/demo1.html
+++ b/demo1.html
@@ -3,7 +3,7 @@
 <head>
     <title>HS애드차이나</title>
     <style>
-     	#div1{width: 200px; height: 200px;background: red; position: absolute;}
+     	#div1{width: 200px; height: 200px;background: red; position: absolute;left:0;top:0}
      </style>
     <script type="text/javascript" src="drag.js"></script>
 <body>
