--- a/demo1.html
+++ b/demo1.html
@@ -3,11 +3,14 @@
 <head>
     <title>HS애드차이나</title>
     <style>
-     	#div1{width: 200px; height: 200px;background: red; position: absolute;left:0;top:0}
+     	#div1{width: 200px; height: 200px;background: red; position: absolute;}
      </style>
     <script type="text/javascript" src="drag.js"></script>
 <body>
 <div id="div1">aa</div>
+<script>
+	drag('div1');
+</script>
 </body>
 
 
